<resources>
    <string name="app_name" translatable="false">All News Hub</string>
    <string name="let_s_start" translatable="false">Let\'s Start</string>
    <string name="help">Help</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="politics_news">Political News</string>
    <string name="new_technology_news">New Technology News</string>
    <string name="select_news_type">Select Category</string>
    <string name="entertainment">Entertainment</string>
    <string name="log_in">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="todo">TODO</string>
    <string name="email">Email *</string>
    <string name="forget_password">Forget password?</string>
    <string name="signUpShadowLeft">TODO</string>
    <string name="confirm_password">Confirm password *</string>
    <string name="signup">Sign Up</string>
    <string name="news_hub">News Hub</string>
    <string name="singup">TODO</string>
    <string name="username">Enter your name</string>
    <string name="password">password *</string>
    <string name="login">Login</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
</resources>