<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewsCategoriesActivity"
    tools:ignore="ExtraText">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/myBarLayout"
        android:layout_width="410dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="392dp"
        app:layout_constraintBottom_toTopOf="@+id/newsTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/myToolbarNewsCategories"
            android:layout_width="match_parent"
            android:layout_height="66dp"
            android:background="@drawable/home_background"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:titleTextColor="@color/black"
            app:titleTextAppearance="@color/black"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <Button
        android:id="@+id/worldWideNewsButton"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_marginTop="90dp"
        android:background="@drawable/buttons_style"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onWordWideClicked"
        android:padding="10dp"
        android:text="World Wide News"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myBarLayout"
        tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/sportsNewsButton"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/buttons_style"
        android:onClick="onsportsClicked"
        android:padding="10dp"
        android:text="Sports News"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/worldWideNewsButton"
        tools:ignore="HardcodedText" />

    <!--        app:layout_constraintTop_toBottomOf="@+id/button5"-->
    tools:ignore="HardcodedText" />

    <Button
        android:id="@+id/politicsNewsButton"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_marginTop="23dp"
        android:background="@drawable/buttons_style"
        android:padding="10dp"
        android:text="@string/politics_news"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sportsNewsButton" />

    <Button
        android:id="@+id/technologyNewsButton"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/buttons_style"
        android:padding="10dp"
        android:text="@string/new_technology_news"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/politicsNewsButton" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/select_news_type"
        android:textColor="@color/black"
        android:textSize="30sp"
        android:textStyle="bold|italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myBarLayout" />

    <Button
        android:id="@+id/entertainmentNewsButton"
        android:layout_width="354dp"
        android:layout_height="56dp"
        android:layout_marginStart="29dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="28dp"
        android:background="@drawable/buttons_style"
        android:padding="10dp"
        android:text="@string/entertainment"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        app:layout_constraintTop_toBottomOf="@+id/technologyNewsButton" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="298dp"
        android:layout_height="90dp"
        android:layout_marginStart="2dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="25dp"
        android:background="@color/white"
        app:flow_verticalAlign="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entertainmentNewsButton">


        <Button
            android:id="@+id/buttonLoginHome"
            android:layout_width="129dp"
            android:layout_height="67dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="14dp"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="onLoginClicked"
            android:padding="10dp"
            android:text="@string/log_in"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/buttonSignupHome"
            android:layout_width="127dp"
            android:layout_height="67dp"
            android:layout_marginStart="10sp"
            android:layout_marginTop="14dp"
            android:layout_marginEnd="15sp"
            android:layout_weight="2"
            android:background="@color/white"
            android:onClick="onSignupClicked"
            android:padding="10dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="22sp"
            android:textStyle="bold"
            tools:ignore="TextSizeCheck" />

    </LinearLayout>

    <TextView
        android:id="@+id/newsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:layout_marginBottom="50dp"
        android:padding="15dp"
        android:text="Breaking News"
        android:textAlignment="center"
        android:textColor="#952C2C"
        android:textSize="30dp"
        android:textStyle="bold"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myBarLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>