<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LogInPage">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/welcomeText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="10dp"
            android:text="Welcome Back"
            android:textAlignment="center"
            android:textColor="@color/black"
            android:textSize="35sp"
            android:textStyle="bold"
            tools:ignore="HardcodedText" />
    </RelativeLayout>


    <ImageView
        android:id="@+id/loginShadowlLeft"
        android:layout_width="0dp"
        android:layout_height="487dp"
        android:layout_marginStart="1dp"
        android:layout_marginEnd="22dp"
        android:layout_marginBottom="98dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/forgetPassword"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/left_login_shadow"/>

    <ImageView
        android:id="@+id/loginPannelArea"
        android:layout_width="345dp"
        android:layout_height="319dp"
        android:layout_marginStart="25dp"
        android:layout_marginEnd="25dp"
        android:layout_marginBottom="180dp"
        android:background="@drawable/login_box"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        android:contentDescription="TODO" />

    <TextView
        android:id="@+id/sugessitionText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:layout_marginBottom="50dp"
        android:padding="10dp"
        android:text="@string/don_t_have_an_account"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/userEmail"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginBottom="205dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textColorHint="#706A6A"
        app:layout_constraintBottom_toBottomOf="@+id/loginPannelArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableRight="@drawable/email_icon"/>

    <TextView
        android:id="@+id/signUpText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="46dp"
        android:minHeight="48dp"
        android:onClick="onSignupClicked"
        android:padding="10dp"
        android:text="SIGN UP"
        android:textColor="@color/color_pink"
        android:textSize="20dp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/sugessitionText" />

    <EditText
        android:id="@+id/userPassword"
        android:layout_width="290dp"
        android:layout_height="55dp"
        android:layout_marginBottom="130dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="Password *"
        android:inputType="textPassword"
        android:textColor="@color/black"
        android:textColorHint="#706A6A"
        app:layout_constraintBottom_toBottomOf="@+id/loginPannelArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:drawableRight="@drawable/icon_password"/>

    <TextView
        android:id="@+id/forgetPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="36dp"
        android:padding="10dp"
        android:text="@string/forget_password"
        android:textColor="@color/black"
        android:textSize="17dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/loginShadowlLeft"
        app:layout_constraintTop_toBottomOf="@+id/userPassword"
        tools:ignore="TextSizeCheck" />

    <Button
        android:id="@+id/mainLoginButton"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginBottom="70dp"
        android:background="@drawable/login_button"
        android:onClick="onMainLoginClicked"
        android:padding="10dp"
        android:text="Login"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/sugessitionText"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/loginTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="210dp"
        android:layout_marginBottom="415dp"
        android:text="Login"
        android:textColor="@color/white"
        android:textSize="35sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/loginShadowlLeft"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/upperRightSignupTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="332dp"
        android:minHeight="48dp"
        android:onClick="onSignupClicked"
        android:text="Sign Up"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="@+id/loginPannelArea"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.914"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>